# codefarm

./: .gitignore  CMakeLists.txt  README.md  style.qss
qml/: Theme.qml  main.qml
qml/components/: AmbientParticles.qml  CellTooltip.qml  CodeEditor.qml  ConfirmDialog.qml  DroneLog.qml  DroneSprite.qml  FarmTile.qml  FloatingEditor.qml  FloatingPanel.qml  GoalOverlay.qml  GoalPanel.qml  IsometricMap.qml  LevelCard.qml  LevelTile.qml  MenuButton.qml  MiniMap.qml  PillButton.qml  ResourceBar.qml  SceneBackdrop.qml  SettingSlider.qml  StarRating.qml  ToggleSwitch.qml  TopBar.qml  WindowChrome.qml
qml/pages/: FailScreen.qml  GameView.qml  HelpPage.qml  LevelBriefing.qml  LevelSelect.qml  MainMenu.qml  ResultScreen.qml  SettingsPage.qml  SplashScreen.qml
resources/: game.qrc
src/: CodeEditor.cpp  CodeEditor.h  CodeHighlighter.cpp  CodeHighlighter.h  CustomButton.cpp  CustomButton.h  FarmBackground.cpp  FarmBackground.h  FarmCanvas.cpp  FarmCanvas.h  GameEngine.cpp  GameEngine.h  MainWindow.cpp  MainWindow.h  levels.h  main.cpp  types.h
src/animation/: AnimationManager.cpp  AnimationManager.h  CloudAnimation.cpp  CloudAnimation.h  ParticleEffect.cpp  ParticleEffect.h
src/audio/: audiomanager.cpp  audiomanager.h
src/core/: CropData.cpp  CropData.h  Drone.cpp  Drone.h  GameState.cpp  GameState.h  LandPlot.h  PathFinder.cpp  PathFinder.h  TechTree.cpp  TechTree.h  Weather.cpp  Weather.h  cell.cpp  cell.h  drone.cpp  drone.h  farmmap.cpp  farmmap.h  gameengine.cpp  gameengine.h  goalsystem.cpp  goalsystem.h
src/editor/: syntaxhighlighter.cpp  syntaxhighlighter.h
src/levels/: leveldata.h  levelmanager.cpp  levelmanager.h
src/python/: gameapi.cpp  gameapi.h  pythonexecutor.cpp  pythonexecutor.h
src/save/: savemanager.cpp  savemanager.h
src/script/: ScriptAPI.cpp  ScriptAPI.h  ScriptEngine.cpp  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h
src/serialization/: SaveManager.cpp  SaveManager.h
src/ui/: CropDetailPopup.cpp  CropDetailPopup.h  DroneItem.cpp  DroneItem.h  ErrorIndicator.cpp  ErrorIndicator.h  FloatingPanel.cpp  FloatingPanel.h  InfoPanel.cpp  InfoPanel.h  MainWindow.cpp  MainWindow.h  MapTileItem.cpp  MapTileItem.h  MapView.cpp  MapView.h  MenuScreen.cpp  MenuScreen.h  ScriptConsole.cpp  ScriptConsole.h  ScriptEditor.cpp  ScriptEditor.h  TechPanel.cpp  TechPanel.h  appviewmodel.cpp  appviewmodel.h
